# quip

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  Makefile  Quip.Mac.sln  Quip.Windows.sln  README.md
Code/Core/: AppendTransaction.cpp  CMakeLists.txt  CursorStyle.hpp  Document.cpp  EditContext.cpp  EraseTransaction.cpp  GlobalSettings.cpp  InsertTransaction.cpp  JumpMode.cpp  Key.cpp  Key.hpp  KeySequence.hpp  Location.cpp  Location.hpp  MapTrie.cpp  MapTrieNode.cpp  Mode.cpp  NormalMode.hpp  Optional.hpp  PopupService.cpp  PopupService.hpp  Rectangle.hpp  SelectionSet.cpp  Selector.cpp
Code/Core/Documents/: Document.cpp  DocumentIterator.cpp  DocumentIterator.hpp  EditContext.cpp  EditContext.hpp  FileTypeDatabase.cpp  FileTypeDatabase.hpp
Code/Core/Modes/: CursorFlags.hpp  KeySequence.cpp  KeySequence.hpp  MapTrie.cpp  MapTrieNode.cpp  MapTrieNode.hpp  Mode.cpp  Mode.hpp  Modifiers.cpp  Modifiers.hpp
Code/Core/Modes/Edit/: EditMode.cpp  EditMode.hpp
Code/Core/Modes/Normal/: NormalMode.cpp  NormalMode.hpp
Code/Core/Modes/Search/: SearchExpression.cpp  SearchMode.hpp
Code/Core/Scripting/: ScriptHost.hpp
Code/Core/Selections/: Selection.cpp  Selection.hpp  SelectionDrawInfo.cpp  Selector.hpp
Code/Core/Services/: PopupService.cpp
Code/Core/Transactions/: InsertTransaction.cpp
Code/Core/Utilities/: AttributeRange.cpp  AttributeRange.hpp  Color.cpp  Coordinate.hpp  Location.hpp  ViewController.hpp
Code/Launcher/: CMakeLists.txt
Code/Mac/: DrawingServiceProvider.mm  MainMenu.xib  PopupServiceProvider.mm  QuipTextView.mm  StatusServiceProvider.hpp  StatusServiceProvider.mm
Code/Tests/: CoordinateTests.cpp  DocumentIteratorTests.cpp
Dependencies/lpeg/: CMakeLists.txt  LICENSE
Dependencies/lua/: CMakeLists.txt  LICENSE
Dependencies/optional-lite/: optional_lite.hpp
Extra/: lldbinit
Launcher/: main.m
Projects/Core/: AppendTransaction.hpp  CMakeLists.txt  ChangeType.hpp  Document.cpp  Document.hpp  DocumentIterator.cpp  DocumentIterator.hpp  DocumentIterator.inl  DrawingService.cpp  EditContext.cpp  EditMode.cpp  EraseTransaction.cpp  GlobalSettings.cpp  GlobalSettings.hpp  JumpMode.hpp  Key.cpp  KeySequence.hpp  Location.cpp  Location.hpp  LuaBinding.cpp  LuaBinding.hpp  Modifiers.hpp  NormalMode.cpp  NormalMode.hpp  ReverseDocumentIterator.cpp  ReverseDocumentIterator.hpp  Script.hpp  ScriptBoundObject.cpp  ScriptBoundObject.hpp  ScriptHost.cpp  ScriptHost.hpp  SearchExpression.cpp  SearchMode.cpp  Selection.cpp  Selection.hpp  SelectionSet.hpp  Selector.cpp  Selector.hpp  Transaction.hpp  Traversal.cpp  (+2 more)
Projects/Core.Tests/: CMakeLists.txt  CoordinateTests.cpp  DocumentIteratorTests.cpp  DocumentTests.cpp  ExtentTests.cpp  LocationTests.cpp  ReverseDocumentIteratorTests.cpp  SelectionTests.cpp  SelectorTests.cpp  TraversalTests.cpp
Projects/Launcher/: CMakeLists.txt
Projects/Quip/: CMakeLists.txt  QuipApplicationDelegate.mm  QuipDocumentController.h  QuipPopupView.h  QuipStatusView.mm  QuipTextView.h  QuipWindowController.mm  QuipWindowController.xib  install.sh.in
Projects/Quip/Resources/Images.xcassets/AppIcon.appiconset/: Contents.json
Projects/Quip/Runtime/: syntax.lua
Quip.Core.xcodeproj/: project.pbxproj
Quip.xcodeproj/: project.pbxproj
Quip.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Quip.xcodeproj/xcshareddata/xcschemes/: Quip.Core.xcscheme  Quip.Launcher.xcscheme  Quip.Tests.xcscheme  (+1 more)
Resources/: AppIcon.acorn
Scripts/: quip
Source/: ApplicationDelegate.h  ApplicationDelegate.mm  Document.cpp  Document.hpp  DocumentIterator.cpp  DocumentIterator.hpp  EditContext.cpp  EditMode.cpp  EditMode.hpp  Info.plist  InsertMode.cpp  InsertMode.hpp  KeyStroke.cpp  Location.cpp  Location.hpp  MainMenu.xib  Mode.cpp  Mode.hpp  NavigationMode.cpp  NavigationMode.hpp  NormalMode.cpp  NormalMode.hpp  QuipDocument.h  QuipDocument.mm  QuipStatusView.mm  QuipTextView.h  QuipTextView.mm  QuipView.h  QuipView.mm  QuipWindowController.h  QuipWindowController.mm  QuipWindowController.xib  SearchExpression.cpp  SearchExpression.hpp  SearchMode.cpp  SearchMode.hpp  Selection.cpp  Selection.hpp  SelectionSet.cpp  SelectionSet.hpp  (+3 more)
Source/Core/: AttributeRange.cpp  AttributeRange.hpp  Classification.cpp  Classification.hpp  Color.cpp  Color.hpp  Coordinate.cpp  Coordinate.hpp  Core.csproj  CursorStyle.cs  CursorStyle.hpp  Document.cpp  Document.hpp  DocumentIterator.cpp  DocumentIterator.hpp  DocumentIterator.inl  DrawingService.cpp  DrawingService.hpp  EditContext.cpp  EditContext.hpp  EditMode.cpp  EditMode.hpp  EraseTransaction.hpp  Extent.cpp  Extent.hpp  FileTypeDatabase.cpp  FileTypeDatabase.hpp  GlobalSettings.cpp  GlobalSettings.hpp  IDocumentView.cs  InsertTransaction.cpp  InsertTransaction.hpp  JumpMode.cpp  JumpMode.hpp  Key.cpp  Key.cs  Key.hpp  KeySequence.cpp  KeySequence.hpp  KeyStroke.cpp  (+42 more)
Source/Mac/: ApplicationDelegate.cs  ApplicationDelegate.designer.cs  ApplicationDelegate.mm  DocumentView.cs  DrawingServiceProvider.hpp  DrawingServiceProvider.mm  Info.plist  Info.plist.in  MacDocumentView.cs  MainMenu.xib  PopupServiceProvider.hpp  PopupServiceProvider.mm  Program.cs  Quip.csproj  QuipApplicationDelegate.h  QuipApplicationDelegate.mm  QuipDocument.mm  QuipDocumentController.mm  QuipPopupView.h  QuipPopupView.mm  QuipStatusView.h  QuipStatusView.mm  QuipTextView.h  QuipTextView.mm  QuipWindowController.h  QuipWindowController.mm  QuipWindowController.xib  StatusServiceProvider.hpp  StatusServiceProvider.mm
Source/Runtime/: boot.lua
Source/Tests/: CoordinateTests.mm  DocumentIteratorTests.mm  DocumentTests.cpp  DocumentTests.mm  ExtentTests.mm  KeySequenceTests.cpp  KeySequenceTests.mm  LocationTests.mm  SearchExpressionTests.mm  SelectionSetTests.cpp  SelectionSetTests.mm  SelectionTests.cpp  SelectorTests.mm  SignalTests.cpp  SignalTests.mm
Source/Windows/: DocumentView.cs  Program.cs  Quip.csproj  QuipWindow.cs  QuipWindow.designer.cs  WindowsDocumentView.cs
Tests/: DocumentIteratorTests.mm  DocumentTests.mm  LocationTests.mm  SearchExpressionTests.mm  SelectionSetTests.mm  SelectionTests.mm
(+22 files in other folders)
