set(SourceFiles
  AppendTransaction.cpp
  AppendTransaction.hpp
  AttributeRange.cpp
  AttributeRange.hpp
  ChangeType.hpp
  Color.cpp
  Color.hpp
  Coordinate.cpp
  Coordinate.hpp
  CursorFlags.hpp
  CursorStyle.hpp
  Document.cpp
  Document.hpp
  DocumentIterator.cpp
  DocumentIterator.hpp
  DocumentIterator.inl
  DrawingService.cpp
  DrawingService.hpp
  EditContext.cpp
  EditContext.hpp
  EditMode.cpp
  EditMode.hpp
  EraseTransaction.cpp
  EraseTransaction.hpp
  Extent.cpp
  Extent.hpp
  FileTypeDatabase.cpp
  FileTypeDatabase.hpp
  GlobalSettings.cpp
  GlobalSettings.hpp
  InsertTransaction.cpp
  InsertTransaction.hpp
  JumpMode.cpp
  JumpMode.hpp
  Key.cpp
  Key.hpp
  KeySequence.cpp
  KeySequence.hpp
  Location.cpp
  Location.hpp
  Lua.hpp
  MapTrie.cpp
  MapTrie.hpp
  MapTrieNode.cpp
  MapTrieNode.hpp
  Mode.cpp
  Mode.hpp
  Modifiers.cpp
  Modifiers.hpp
  NormalMode.cpp
  NormalMode.hpp
  Optional.hpp
  PopupService.cpp
  PopupService.hpp
  Rectangle.cpp
  Rectangle.hpp
  Script.cpp
  Script.hpp
  ScriptHost.cpp
  ScriptHost.hpp
  SearchExpression.cpp
  SearchExpression.hpp
  SearchMode.cpp
  SearchMode.hpp
  Selection.cpp
  Selection.hpp
  SelectionDrawInfo.cpp
  SelectionDrawInfo.hpp
  SelectionSet.cpp
  SelectionSet.hpp
  SelectionSetIterator.hpp
  SelectionSetIterator.inl
  Selector.cpp
  Selector.hpp
  Signal.hpp
  StatusService.cpp
  StatusService.hpp
  Transaction.cpp
  Transaction.hpp
  ViewController.hpp
)

add_library(Quip.Core ${SourceFiles})
set_target_properties(Quip.Core PROPERTIES CXX_STANDARD 14 CXX_STANDARD_REQUIRED ON)
target_include_directories(Quip.Core PRIVATE ../../Dependencies/lua/include)
target_include_directories(Quip.Core PRIVATE ../../Dependencies/optional-lite)
